--- a/Client/twiths_/Base.lproj/Main.storyboard
+++ b/Client/twiths_/Base.lproj/Main.storyboard
@@ -8,7 +8,6 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
-        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -29,68 +28,61 @@
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="159.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="DPd-w0-djI">
-                                            <rect key="frame" x="16" y="21" width="292.5" height="92.5"/>
+                                        <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="n6F-CI-z70">
+                                            <rect key="frame" x="21" y="21" width="302" height="92.5"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="EFv-gy-nUn">
                                                     <rect key="frame" x="0.0" y="0.0" width="92.5" height="92.5"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" secondItem="EFv-gy-nUn" secondAttribute="height" multiplier="92:92" id="9Aa-QN-hOh"/>
+                                                        <constraint firstAttribute="width" secondItem="EFv-gy-nUn" secondAttribute="height" multiplier="1:1" id="9Aa-QN-hOh"/>
                                                     </constraints>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="620-gc-ue4">
-                                                    <rect key="frame" x="107.5" y="26.5" width="185" height="39.5"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="620-gc-ue4">
+                                                    <rect key="frame" x="112.5" y="26.5" width="189.5" height="39.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="33"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
-                                            <constraints>
-                                                <constraint firstItem="620-gc-ue4" firstAttribute="leading" secondItem="EFv-gy-nUn" secondAttribute="trailing" constant="15" id="83Z-gg-sjA"/>
-                                                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="EFv-gy-nUn" secondAttribute="bottom" id="FHj-b2-jPZ"/>
-                                                <constraint firstItem="EFv-gy-nUn" firstAttribute="width" secondItem="620-gc-ue4" secondAttribute="width" multiplier="0.5" id="Hjk-Lp-12r"/>
-                                                <constraint firstItem="EFv-gy-nUn" firstAttribute="top" relation="greaterThanOrEqual" secondItem="DPd-w0-djI" secondAttribute="top" id="duk-QS-Uol"/>
-                                                <constraint firstItem="EFv-gy-nUn" firstAttribute="leading" secondItem="DPd-w0-djI" secondAttribute="leading" id="eDJ-7V-HeT"/>
-                                                <constraint firstAttribute="trailing" secondItem="620-gc-ue4" secondAttribute="trailing" id="io4-2M-ZrF"/>
-                                            </constraints>
                                         </stackView>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="next-arrow-icon" translatesAutoresizingMaskIntoConstraints="NO" id="d4G-5n-X3C">
-                                            <rect key="frame" x="351" y="40" width="16" height="32"/>
+                                            <rect key="frame" x="333" y="64" width="16" height="32"/>
                                             <constraints>
-                                                <constraint firstAttribute="width" constant="16" id="KQB-pX-5At"/>
+                                                <constraint firstAttribute="width" constant="16" id="44g-H2-kDd"/>
+                                                <constraint firstAttribute="height" constant="32" id="woG-Th-AAU"/>
                                             </constraints>
                                         </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nHW-et-hEx">
-                                            <rect key="frame" x="142" y="122" width="212" height="21"/>
-                                            <constraints>
-                                                <constraint firstAttribute="width" constant="212" id="b7b-zt-edd"/>
-                                            </constraints>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon-157349_640" translatesAutoresizingMaskIntoConstraints="NO" id="1vE-16-Wlc">
-                                            <rect key="frame" x="112" y="122" width="22" height="21"/>
-                                            <constraints>
-                                                <constraint firstAttribute="width" constant="22" id="o1N-BI-XKJ"/>
-                                            </constraints>
-                                        </imageView>
+                                        <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="KUG-fi-7a7">
+                                            <rect key="frame" x="105" y="122" width="244" height="22"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon-157349_640" translatesAutoresizingMaskIntoConstraints="NO" id="1vE-16-Wlc">
+                                                    <rect key="frame" x="0.0" y="0.0" width="22" height="22"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="22" id="HCv-tm-I5Q"/>
+                                                        <constraint firstAttribute="height" constant="22" id="dcz-1T-qz0"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nHW-et-hEx">
+                                                    <rect key="frame" x="32" y="0.0" width="212" height="22"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="212" id="b7b-zt-edd"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </stackView>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="d4G-5n-X3C" firstAttribute="top" secondItem="ljh-PH-vBj" secondAttribute="top" constant="40" id="037-ZL-2EW"/>
-                                        <constraint firstItem="nHW-et-hEx" firstAttribute="top" secondItem="d4G-5n-X3C" secondAttribute="bottom" constant="50" id="2aa-Ih-A10"/>
-                                        <constraint firstItem="d4G-5n-X3C" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="620-gc-ue4" secondAttribute="trailing" constant="28" id="37D-TX-JoV"/>
-                                        <constraint firstItem="1vE-16-Wlc" firstAttribute="top" secondItem="DPd-w0-djI" secondAttribute="bottom" constant="8.5" id="3Wk-Eh-s33"/>
-                                        <constraint firstAttribute="trailing" secondItem="d4G-5n-X3C" secondAttribute="trailing" constant="8" id="4Vh-o2-jaG"/>
-                                        <constraint firstAttribute="bottom" secondItem="1vE-16-Wlc" secondAttribute="bottom" constant="16.5" id="DYF-4b-zdB"/>
-                                        <constraint firstAttribute="bottom" secondItem="nHW-et-hEx" secondAttribute="bottom" constant="17" id="F6b-5J-9o3"/>
-                                        <constraint firstItem="nHW-et-hEx" firstAttribute="leading" secondItem="1vE-16-Wlc" secondAttribute="trailing" constant="8" id="ZzO-ok-ase"/>
-                                        <constraint firstAttribute="trailingMargin" secondItem="nHW-et-hEx" secondAttribute="trailing" constant="5" id="aaF-8C-A8n"/>
-                                        <constraint firstItem="DPd-w0-djI" firstAttribute="leading" secondItem="ljh-PH-vBj" secondAttribute="leadingMargin" id="hNr-kI-T7W"/>
-                                        <constraint firstItem="nHW-et-hEx" firstAttribute="top" secondItem="1vE-16-Wlc" secondAttribute="top" id="hep-fM-Qxy"/>
-                                        <constraint firstItem="DPd-w0-djI" firstAttribute="top" secondItem="ljh-PH-vBj" secondAttribute="topMargin" constant="10" id="kBf-Ky-F0v"/>
-                                        <constraint firstItem="1vE-16-Wlc" firstAttribute="height" secondItem="nHW-et-hEx" secondAttribute="height" id="kQD-tS-AJ6"/>
-                                        <constraint firstAttribute="bottom" secondItem="DPd-w0-djI" secondAttribute="bottom" constant="46" id="vjG-3J-dzA"/>
+                                        <constraint firstItem="n6F-CI-z70" firstAttribute="leading" secondItem="ljh-PH-vBj" secondAttribute="leadingMargin" constant="5" id="0eK-vK-yy5"/>
+                                        <constraint firstItem="d4G-5n-X3C" firstAttribute="leading" secondItem="n6F-CI-z70" secondAttribute="trailing" constant="10" id="4jx-Wy-aLK"/>
+                                        <constraint firstItem="d4G-5n-X3C" firstAttribute="centerY" secondItem="ljh-PH-vBj" secondAttribute="centerY" id="5VO-2X-dGj"/>
+                                        <constraint firstItem="n6F-CI-z70" firstAttribute="top" secondItem="ljh-PH-vBj" secondAttribute="topMargin" constant="10" id="Jbu-69-myE"/>
+                                        <constraint firstItem="KUG-fi-7a7" firstAttribute="top" secondItem="n6F-CI-z70" secondAttribute="bottom" constant="8.5" id="MLp-9L-HVh"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="d4G-5n-X3C" secondAttribute="trailing" constant="10" id="Og3-aQ-4vf"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="KUG-fi-7a7" secondAttribute="bottom" constant="5" id="U9R-SV-yA1"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="KUG-fi-7a7" secondAttribute="trailing" constant="10" id="xFh-i0-FfH"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
