--- a/Client/twiths_/Storyboard/TourCreate.storyboard
+++ b/Client/twiths_/Storyboard/TourCreate.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="xa7-RQ-g9G">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="xa7-RQ-g9G">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -201,7 +201,7 @@
                     <navigationItem key="navigationItem" id="gxx-X6-kek">
                         <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="vra-eO-OPY">
                             <connections>
-                                <segue destination="Zn9-Cz-aR3" kind="unwind" unwindAction="MapToCreateLandmarkWithSegue:" id="pNC-xn-aPA"/>
+                                <segue destination="Zn9-Cz-aR3" kind="unwind" identifier="CreateMapCancel" unwindAction="MapToCreateLandmarkWithSegue:" id="pNC-xn-aPA"/>
                             </connections>
                         </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" systemItem="done" id="eAd-nW-Xvi">
